[package]
name = "winapihash"
version = "0.1.0"
edition = "2021"

[dependencies]

# For Windows API
[target.'cfg(windows)'.dependencies.windows]
version = "0.57.0"
features = [
    "Win32_Foundation",
    "Win32_System",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemServices",
]

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.52.0"
features = [
    "Win32_Foundation",
    "Win32_System",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemServices",
]