[package]
name = "winapihash"
version = "0.1.0"
edition = "2021"

[dependencies]
djb2 = { path = "djb2" }
djb2macro = { path = "djb2macro" }
hash_resolver = { path = "hash_resolver" }
cfg-if = "1.0.0"

# For Windows API
[target.'cfg(windows)'.dependencies.windows]
version = "0.57.0"
features = [
    "Win32_Foundation",
]
